--- a/build.gradle
+++ b/build.gradle
@@ -93,30 +93,34 @@ if(isReleaseBuild) {
 uploadArchives {
     repositories {
         if (isDevBuild) {
-            mavenLocal()
+            ivy {
+              ivyPattern "$projectDir/repo/[organisation]/[module]-ivy-[revision].xml"
+              artifactPattern "$projectDir/repo/[organisation]/[module]-[revision](-[classifier]).[ext]"
+            }
+            //mavenLocal()
         }
         else {
             mavenDeployer {
                 if(isReleaseBuild) {
                     beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
                 }
-    
+
                 repository(url: sonatypeRepositoryUrl) {
                   authentication(userName: sonatypeUsername, password: sonatypePassword)
                 }
-    
+
                 pom.project {
                    name 'GradleFx'
                    packaging 'jar'
                    description 'GradleFx is a Gradle plugin for building Flex and Actionscript applications'
                    url 'http://gradlefx.github.com/'
-    
+
                    scm {
                        url 'scm:git@github.com:GradleFx/GradleFx.git'
                        connection 'scm:git@github.com:GradleFx/GradleFx.git'
                        developerConnection 'scm:git@github.com:GradleFx/GradleFx.git'
                    }
-    
+
                    licenses {
                        license {
                            name 'The Apache Software License, Version 2.0'
@@ -124,7 +128,7 @@ uploadArchives {
                            distribution 'repo'
                        }
                    }
-    
+
                    developers {
                        developer {
                            id 'yennicktrevels'
