--- a/src/main/resources/META-INF/gradle-plugins/ideafx.properties
+++ b/src/main/resources/META-INF/gradle-plugins/ideafx.properties
@@ -1,1 +1,1 @@
-implementation-class=org.gradlefx.plugins.ide.idea.IdeaGradleFxPlugin
+implementation-class=org.gradlefx.plugins.ide.idea.IdeaPlugin
